tests/error/type_match/base_case_implicit_conversion2.bz
// error: unable to match expression of type 'f32' to 'f64'
function test()
{
	let _: f64 = 0.0f32;
}
